frontend/CursorField.module.css
.cursor {
  position: absolute;
  pointer-events: none;
  top: 0px;
  left: 0px;
  transform: translate3d(0, 0, 0);
  z-index: 300;
}

.cursorTouch {
  transition: transform 100ms;
}

.cursorSelf {
  transition: none;
  z-index: 9999;
}

@media (hover: none) {
  .cursorSelf {
    display: none;
  }
}

.cursor svg {
  /*
  Needed to promote to layer and avoid paints on cursor movement.
  Don't completely understand why this is necessary as the parent
  .cursor element has its own layer and is what is being moved, but
  promoting the svg element as well eliminates paints in Chrome.
   */
  transform: translate3d(0, 0, 0);
  position: absolute;
  left: -1px;
  top: -1px;
  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
}

.location {
  position: absolute;
  padding: 4px;
  font-weight: 700;
  font-size: 0.8em;
  color: rgba(0, 0, 0, 0.8);
  border-radius: 4px;
  white-space: nowrap;
  left: 12px;
  top: 14px;
  transition: top 300ms, opacity 100ms;
  transition-timing-function: cubic-bezier(0.46, 0.11, 0.065, 1.65);
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
}

